# api/docs/swagger.json
@@ -36,6 +36,22 @@
                 "responses": {}
             }
         },
+        "/auth/logout": {
+            "post": {
+                "description": "Logout a user by revoking their refresh token",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Logout a user",
+                "responses": {}
+            }
+        },
         "/auth/refresh": {
             "post": {
                 "description": "Refresh JWT token using refresh token cookie",
